contrib/libs/pdfium/public/fpdfview.h

typedef struct fpdf_annotation_t__* FPDF_ANNOTATION;
typedef struct fpdf_bitmap_t__* FPDF_BITMAP;
typedef struct fpdf_document_t__* FPDF_DOCUMENT;
typedef struct fpdf_form_handle_t__* FPDF_FORMHANDLE;
typedef struct fpdf_page_t__* FPDF_PAGE;
typedef struct fpdf_pageobject_t__* FPDF_PAGEOBJECT;  
typedef int FPDF_BOOL;
typedef float FS_FLOAT;
typedef unsigned short FPDF_WCHAR;
typedef const char* FPDF_BYTESTRING;
typedef const FPDF_WCHAR* FPDF_WIDESTRING;
typedef struct _FS_RECTF_ {
  float left;
  float top;
  float right;
  float bottom;
} * FS_LPRECTF, FS_RECTF;
typedef struct FS_POINTF_ {
  float x;
  float y;
} * FS_LPPOINTF, FS_POINTF;
typedef struct _FS_QUADPOINTSF {
  FS_FLOAT x1;
  FS_FLOAT y1;
  FS_FLOAT x2;
  FS_FLOAT y2;
  FS_FLOAT x3;
  FS_FLOAT y3;
  FS_FLOAT x4;
  FS_FLOAT y4;
} FS_QUADPOINTSF;
typedef int FPDF_ANNOTATION_SUBTYPE;
typedef int FPDF_ANNOT_APPEARANCEMODE;
typedef int FPDF_OBJECT_TYPE;