contrib/python/pypdfium2/pypdfium2_raw/bindings.py


# ./fpdf_formfill.h: 1485
FORM_CanUndo = _libs['pdfium']['FORM_CanUndo']
FORM_CanUndo.argtypes = (FPDF_FORMHANDLE, FPDF_PAGE)
FORM_CanUndo.restype = FPDF_BOOL

# ./fpdf_formfill.h: 1497
FORM_CanRedo = _libs['pdfium']['FORM_CanRedo']
FORM_CanRedo.argtypes = (FPDF_FORMHANDLE, FPDF_PAGE)
FORM_CanRedo.restype = FPDF_BOOL

# ./fpdf_formfill.h: 1508
FORM_Undo = _libs['pdfium']['FORM_Undo']
FORM_Undo.argtypes = (FPDF_FORMHANDLE, FPDF_PAGE)
FORM_Undo.restype = FPDF_BOOL

# ./fpdf_formfill.h: 1519
FORM_Redo = _libs['pdfium']['FORM_Redo']
FORM_Redo.argtypes = (FPDF_FORMHANDLE, FPDF_PAGE)
FORM_Redo.restype = FPDF_BOOL

# ./fpdf_formfill.h: 1532
FORM_ForceToKillFocus = _libs['pdfium']['FORM_ForceToKillFocus']
FORM_ForceToKillFocus.argtypes = (FPDF_FORMHANDLE, )
FORM_ForceToKillFocus.restype = FPDF_BOOL

# ./fpdf_formfill.h: 1555
FORM_GetFocusedAnnot = _libs['pdfium']['FORM_GetFocusedAnnot']
FORM_GetFocusedAnnot.argtypes = (FPDF_FORMHANDLE, POINTER(c_int), POINTER(FPDF_ANNOTATION))
FORM_GetFocusedAnnot.restype = FPDF_BOOL

# ./fpdf_formfill.h: 1572
FORM_SetFocusedAnnot = _libs['pdfium']['FORM_SetFocusedAnnot']
FORM_SetFocusedAnnot.argtypes = (FPDF_FORMHANDLE, FPDF_ANNOTATION)
FORM_SetFocusedAnnot.restype = FPDF_BOOL

# ./fpdf_formfill.h: 1626
FPDFPage_HasFormFieldAtPoint = _libs['pdfium']['FPDFPage_HasFormFieldAtPoint']
FPDFPage_HasFormFieldAtPoint.argtypes = (FPDF_FORMHANDLE, FPDF_PAGE, c_double, c_double)
FPDFPage_HasFormFieldAtPoint.restype = c_int

# ./fpdf_formfill.h: 1643
FPDFPage_FormFieldZOrderAtPoint = _libs['pdfium']['FPDFPage_FormFieldZOrderAtPoint']
FPDFPage_FormFieldZOrderAtPoint.argtypes = (FPDF_FORMHANDLE, FPDF_PAGE, c_double, c_double)
FPDFPage_FormFieldZOrderAtPoint.restype = c_int

# ./fpdf_formfill.h: 1669
FPDF_SetFormFieldHighlightColor = _libs['pdfium']['FPDF_SetFormFieldHighlightColor']
FPDF_SetFormFieldHighlightColor.argtypes = (FPDF_FORMHANDLE, c_int, c_ulong)
FPDF_SetFormFieldHighlightColor.restype = None

# ./fpdf_formfill.h: 1686
FPDF_SetFormFieldHighlightAlpha = _libs['pdfium']['FPDF_SetFormFieldHighlightAlpha']
FPDF_SetFormFieldHighlightAlpha.argtypes = (FPDF_FORMHANDLE, c_ubyte)
FPDF_SetFormFieldHighlightAlpha.restype = None

# ./fpdf_formfill.h: 1699
FPDF_RemoveFormFieldHighlight = _libs['pdfium']['FPDF_RemoveFormFieldHighlight']
FPDF_RemoveFormFieldHighlight.argtypes = (FPDF_FORMHANDLE, )
FPDF_RemoveFormFieldHighlight.restype = None

# ./fpdf_formfill.h: 1736
FPDF_FFLDraw = _libs['pdfium']['FPDF_FFLDraw']
FPDF_FFLDraw.argtypes = (FPDF_FORMHANDLE, FPDF_BITMAP, FPDF_PAGE, c_int, c_int, c_int, c_int, c_int, c_int)
FPDF_FFLDraw.restype = None

# ./fpdf_formfill.h: 1767
FPDF_GetFormType = _libs['pdfium']['FPDF_GetFormType']
FPDF_GetFormType.argtypes = (FPDF_DOCUMENT, )
FPDF_GetFormType.restype = c_int

# ./fpdf_formfill.h: 1791
FORM_SetIndexSelected = _libs['pdfium']['FORM_SetIndexSelected']
FORM_SetIndexSelected.argtypes = (FPDF_FORMHANDLE, FPDF_PAGE, c_int, FPDF_BOOL)
FORM_SetIndexSelected.restype = FPDF_BOOL

# ./fpdf_formfill.h: 1814
FORM_IsIndexSelected = _libs['pdfium']['FORM_IsIndexSelected']
FORM_IsIndexSelected.argtypes = (FPDF_FORMHANDLE, FPDF_PAGE, c_int)
FORM_IsIndexSelected.restype = FPDF_BOOL

# ./fpdf_formfill.h: 1824
FPDF_LoadXFA = _libs['pdfium']['FPDF_LoadXFA']
FPDF_LoadXFA.argtypes = (FPDF_DOCUMENT, )
FPDF_LoadXFA.restype = FPDF_BOOL

# ./fpdf_annot.h: 42
enum_FPDFANNOT_COLORTYPE = c_int

# ./fpdf_annot.h: 42
FPDFANNOT_COLORTYPE_Color = 0

# ./fpdf_annot.h: 42
FPDFANNOT_COLORTYPE_InteriorColor = (FPDFANNOT_COLORTYPE_Color + 1)

# ./fpdf_annot.h: 42
FPDFANNOT_COLORTYPE = enum_FPDFANNOT_COLORTYPE

# ./fpdf_annot.h: 121
FPDFAnnot_IsSupportedSubtype = _libs['pdfium']['FPDFAnnot_IsSupportedSubtype']
FPDFAnnot_IsSupportedSubtype.argtypes = (FPDF_ANNOTATION_SUBTYPE, )
FPDFAnnot_IsSupportedSubtype.restype = FPDF_BOOL

# ./fpdf_annot.h: 134
FPDFPage_CreateAnnot = _libs['pdfium']['FPDFPage_CreateAnnot']
FPDFPage_CreateAnnot.argtypes = (FPDF_PAGE, FPDF_ANNOTATION_SUBTYPE)
FPDFPage_CreateAnnot.restype = FPDF_ANNOTATION

# ./fpdf_annot.h: 142
FPDFPage_GetAnnotCount = _libs['pdfium']['FPDFPage_GetAnnotCount']
FPDFPage_GetAnnotCount.argtypes = (FPDF_PAGE, )
FPDFPage_GetAnnotCount.restype = c_int

# ./fpdf_annot.h: 152
FPDFPage_GetAnnot = _libs['pdfium']['FPDFPage_GetAnnot']
FPDFPage_GetAnnot.argtypes = (FPDF_PAGE, c_int)
FPDFPage_GetAnnot.restype = FPDF_ANNOTATION

# ./fpdf_annot.h: 163
FPDFPage_GetAnnotIndex = _libs['pdfium']['FPDFPage_GetAnnotIndex']
FPDFPage_GetAnnotIndex.argtypes = (FPDF_PAGE, FPDF_ANNOTATION)
FPDFPage_GetAnnotIndex.restype = c_int

# ./fpdf_annot.h: 172
FPDFPage_CloseAnnot = _libs['pdfium']['FPDFPage_CloseAnnot']
FPDFPage_CloseAnnot.argtypes = (FPDF_ANNOTATION, )
FPDFPage_CloseAnnot.restype = None

# ./fpdf_annot.h: 181
FPDFPage_RemoveAnnot = _libs['pdfium']['FPDFPage_RemoveAnnot']
FPDFPage_RemoveAnnot.argtypes = (FPDF_PAGE, c_int)
FPDFPage_RemoveAnnot.restype = FPDF_BOOL

# ./fpdf_annot.h: 191
FPDFAnnot_GetSubtype = _libs['pdfium']['FPDFAnnot_GetSubtype']
FPDFAnnot_GetSubtype.argtypes = (FPDF_ANNOTATION, )
FPDFAnnot_GetSubtype.restype = FPDF_ANNOTATION_SUBTYPE

# ./fpdf_annot.h: 202
FPDFAnnot_IsObjectSupportedSubtype = _libs['pdfium']['FPDFAnnot_IsObjectSupportedSubtype']
FPDFAnnot_IsObjectSupportedSubtype.argtypes = (FPDF_ANNOTATION_SUBTYPE, )
FPDFAnnot_IsObjectSupportedSubtype.restype = FPDF_BOOL

# ./fpdf_annot.h: 216
FPDFAnnot_UpdateObject = _libs['pdfium']['FPDFAnnot_UpdateObject']
FPDFAnnot_UpdateObject.argtypes = (FPDF_ANNOTATION, FPDF_PAGEOBJECT)
FPDFAnnot_UpdateObject.restype = FPDF_BOOL

# ./fpdf_annot.h: 231
FPDFAnnot_AddInkStroke = _libs['pdfium']['FPDFAnnot_AddInkStroke']
FPDFAnnot_AddInkStroke.argtypes = (FPDF_ANNOTATION, POINTER(FS_POINTF), c_size_t)
FPDFAnnot_AddInkStroke.restype = c_int

# ./fpdf_annot.h: 244
FPDFAnnot_RemoveInkList = _libs['pdfium']['FPDFAnnot_RemoveInkList']
FPDFAnnot_RemoveInkList.argtypes = (FPDF_ANNOTATION, )
FPDFAnnot_RemoveInkList.restype = FPDF_BOOL

# ./fpdf_annot.h: 258
FPDFAnnot_AppendObject = _libs['pdfium']['FPDFAnnot_AppendObject']
FPDFAnnot_AppendObject.argtypes = (FPDF_ANNOTATION, FPDF_PAGEOBJECT)
FPDFAnnot_AppendObject.restype = FPDF_BOOL

# ./fpdf_annot.h: 267
FPDFAnnot_GetObjectCount = _libs['pdfium']['FPDFAnnot_GetObjectCount']
FPDFAnnot_GetObjectCount.argtypes = (FPDF_ANNOTATION, )
FPDFAnnot_GetObjectCount.restype = c_int

# ./fpdf_annot.h: 277
FPDFAnnot_GetObject = _libs['pdfium']['FPDFAnnot_GetObject']
FPDFAnnot_GetObject.argtypes = (FPDF_ANNOTATION, c_int)
FPDFAnnot_GetObject.restype = FPDF_PAGEOBJECT

# ./fpdf_annot.h: 287
FPDFAnnot_RemoveObject = _libs['pdfium']['FPDFAnnot_RemoveObject']
FPDFAnnot_RemoveObject.argtypes = (FPDF_ANNOTATION, c_int)
FPDFAnnot_RemoveObject.restype = FPDF_BOOL

# ./fpdf_annot.h: 300
FPDFAnnot_SetColor = _libs['pdfium']['FPDFAnnot_SetColor']
FPDFAnnot_SetColor.argtypes = (FPDF_ANNOTATION, FPDFANNOT_COLORTYPE, c_uint, c_uint, c_uint, c_uint)
FPDFAnnot_SetColor.restype = FPDF_BOOL

# ./fpdf_annot.h: 319
FPDFAnnot_GetColor = _libs['pdfium']['FPDFAnnot_GetColor']
FPDFAnnot_GetColor.argtypes = (FPDF_ANNOTATION, FPDFANNOT_COLORTYPE, POINTER(c_uint), POINTER(c_uint), POINTER(c_uint), POINTER(c_uint))
FPDFAnnot_GetColor.restype = FPDF_BOOL

# ./fpdf_annot.h: 339
FPDFAnnot_HasAttachmentPoints = _libs['pdfium']['FPDFAnnot_HasAttachmentPoints']
FPDFAnnot_HasAttachmentPoints.argtypes = (FPDF_ANNOTATION, )
FPDFAnnot_HasAttachmentPoints.restype = FPDF_BOOL

# ./fpdf_annot.h: 355
FPDFAnnot_SetAttachmentPoints = _libs['pdfium']['FPDFAnnot_SetAttachmentPoints']
FPDFAnnot_SetAttachmentPoints.argtypes = (FPDF_ANNOTATION, c_size_t, POINTER(FS_QUADPOINTSF))
FPDFAnnot_SetAttachmentPoints.restype = FPDF_BOOL

# ./fpdf_annot.h: 370
FPDFAnnot_AppendAttachmentPoints = _libs['pdfium']['FPDFAnnot_AppendAttachmentPoints']
FPDFAnnot_AppendAttachmentPoints.argtypes = (FPDF_ANNOTATION, POINTER(FS_QUADPOINTSF))
FPDFAnnot_AppendAttachmentPoints.restype = FPDF_BOOL

# ./fpdf_annot.h: 380
FPDFAnnot_CountAttachmentPoints = _libs['pdfium']['FPDFAnnot_CountAttachmentPoints']
FPDFAnnot_CountAttachmentPoints.argtypes = (FPDF_ANNOTATION, )
FPDFAnnot_CountAttachmentPoints.restype = c_size_t

# ./fpdf_annot.h: 391
FPDFAnnot_GetAttachmentPoints = _libs['pdfium']['FPDFAnnot_GetAttachmentPoints']
FPDFAnnot_GetAttachmentPoints.argtypes = (FPDF_ANNOTATION, c_size_t, POINTER(FS_QUADPOINTSF))
FPDFAnnot_GetAttachmentPoints.restype = FPDF_BOOL

# ./fpdf_annot.h: 405
FPDFAnnot_SetRect = _libs['pdfium']['FPDFAnnot_SetRect']
FPDFAnnot_SetRect.argtypes = (FPDF_ANNOTATION, POINTER(FS_RECTF))
FPDFAnnot_SetRect.restype = FPDF_BOOL

# ./fpdf_annot.h: 415
FPDFAnnot_GetRect = _libs['pdfium']['FPDFAnnot_GetRect']
FPDFAnnot_GetRect.argtypes = (FPDF_ANNOTATION, POINTER(FS_RECTF))
FPDFAnnot_GetRect.restype = FPDF_BOOL

# ./fpdf_annot.h: 430
FPDFAnnot_GetVertices = _libs['pdfium']['FPDFAnnot_GetVertices']
FPDFAnnot_GetVertices.argtypes = (FPDF_ANNOTATION, POINTER(FS_POINTF), c_ulong)
FPDFAnnot_GetVertices.restype = c_ulong

# ./fpdf_annot.h: 442
FPDFAnnot_GetInkListCount = _libs['pdfium']['FPDFAnnot_GetInkListCount']
FPDFAnnot_GetInkListCount.argtypes = (FPDF_ANNOTATION, )
FPDFAnnot_GetInkListCount.restype = c_ulong

# ./fpdf_annot.h: 457
FPDFAnnot_GetInkListPath = _libs['pdfium']['FPDFAnnot_GetInkListPath']
FPDFAnnot_GetInkListPath.argtypes = (FPDF_ANNOTATION, c_ulong, POINTER(FS_POINTF), c_ulong)
FPDFAnnot_GetInkListPath.restype = c_ulong

# ./fpdf_annot.h: 471
FPDFAnnot_GetLine = _libs['pdfium']['FPDFAnnot_GetLine']
FPDFAnnot_GetLine.argtypes = (FPDF_ANNOTATION, POINTER(FS_POINTF), POINTER(FS_POINTF))
FPDFAnnot_GetLine.restype = FPDF_BOOL

# ./fpdf_annot.h: 487
FPDFAnnot_SetBorder = _libs['pdfium']['FPDFAnnot_SetBorder']
FPDFAnnot_SetBorder.argtypes = (FPDF_ANNOTATION, c_float, c_float, c_float)
FPDFAnnot_SetBorder.restype = FPDF_BOOL

# ./fpdf_annot.h: 503
FPDFAnnot_GetBorder = _libs['pdfium']['FPDFAnnot_GetBorder']
FPDFAnnot_GetBorder.argtypes = (FPDF_ANNOTATION, POINTER(c_float), POINTER(c_float), POINTER(c_float))
FPDFAnnot_GetBorder.restype = FPDF_BOOL

# ./fpdf_annot.h: 527
FPDFAnnot_GetFormAdditionalActionJavaScript = _libs['pdfium']['FPDFAnnot_GetFormAdditionalActionJavaScript']
FPDFAnnot_GetFormAdditionalActionJavaScript.argtypes = (FPDF_FORMHANDLE, FPDF_ANNOTATION, c_int, POINTER(FPDF_WCHAR), c_ulong)
FPDFAnnot_GetFormAdditionalActionJavaScript.restype = c_ulong

# ./fpdf_annot.h: 540
FPDFAnnot_HasKey = _libs['pdfium']['FPDFAnnot_HasKey']
FPDFAnnot_HasKey.argtypes = (FPDF_ANNOTATION, FPDF_BYTESTRING)
FPDFAnnot_HasKey.restype = FPDF_BOOL

# ./fpdf_annot.h: 551
FPDFAnnot_GetValueType = _libs['pdfium']['FPDFAnnot_GetValueType']
FPDFAnnot_GetValueType.argtypes = (FPDF_ANNOTATION, FPDF_BYTESTRING)
FPDFAnnot_GetValueType.restype = FPDF_OBJECT_TYPE

# ./fpdf_annot.h: 564
FPDFAnnot_SetStringValue = _libs['pdfium']['FPDFAnnot_SetStringValue']
FPDFAnnot_SetStringValue.argtypes = (FPDF_ANNOTATION, FPDF_BYTESTRING, FPDF_WIDESTRING)
FPDFAnnot_SetStringValue.restype = FPDF_BOOL

# ./fpdf_annot.h: 584
FPDFAnnot_GetStringValue = _libs['pdfium']['FPDFAnnot_GetStringValue']
FPDFAnnot_GetStringValue.argtypes = (FPDF_ANNOTATION, FPDF_BYTESTRING, POINTER(FPDF_WCHAR), c_ulong)
FPDFAnnot_GetStringValue.restype = c_ulong

# ./fpdf_annot.h: 601
FPDFAnnot_GetNumberValue = _libs['pdfium']['FPDFAnnot_GetNumberValue']
FPDFAnnot_GetNumberValue.argtypes = (FPDF_ANNOTATION, FPDF_BYTESTRING, POINTER(c_float))
FPDFAnnot_GetNumberValue.restype = FPDF_BOOL

# ./fpdf_annot.h: 618
FPDFAnnot_SetAP = _libs['pdfium']['FPDFAnnot_SetAP']
FPDFAnnot_SetAP.argtypes = (FPDF_ANNOTATION, FPDF_ANNOT_APPEARANCEMODE, FPDF_WIDESTRING)
FPDFAnnot_SetAP.restype = FPDF_BOOL

# ./fpdf_annot.h: 640
FPDFAnnot_GetAP = _libs['pdfium']['FPDFAnnot_GetAP']
FPDFAnnot_GetAP.argtypes = (FPDF_ANNOTATION, FPDF_ANNOT_APPEARANCEMODE, POINTER(FPDF_WCHAR), c_ulong)
FPDFAnnot_GetAP.restype = c_ulong
